This commit updates my work experience, skills, contact details and readme.md file.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,248 @@
 <!DOCTYPE html>
-	<html lang="en">
-		<head>
-			<title>
-				Faisal Ahmed Resume
-			</title>
-		</head>
-	<body>
-		<main>
-			<h1> Faisal Ahmed Resume Coming Soon</h1>
-		</main>
-	</body>
+<html>
+<head>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Julius+Sans+One&family=Open+Sans&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/index.css">
+</head>
+<body>
+  <page size="A4">
+    <div class="container">
+      <div class="leftPanel">
+        <img src=".assets/faisalAhmed.png"/>
+        <div class="details">
+          <div class="item bottomLineSeparator">
+            <h2>
+              CONTACT
+            </h2>
+            <div class="smallText">
+              <p>
+                <i class="fa fa-phone contactIcon" aria-hidden="true"></i>
+                (+31) 0687941678
+              </p>
+              <p>
+                <i class="fa fa-envelope contactIcon" aria-hidden="true"></i>
+                <a href="mailto:faisalg2006@gmail.com">
+                  faisalg2006@gmail.com
+                </a>
+              </p>
+              <p>
+                <i class="fa fa-map-marker contactIcon" aria-hidden="true"></i>
+                Utrecht, Netherlands
+              </p>
+              <p>
+                <i class="fa fa-linkedin-square contactIcon" aria-hidden="true"></i>
+                <a href="#">
+                  faisalahmed92
+                </a>
+              </p>
+
+            </div>
+          </div>
+          <div class="item bottomLineSeparator">
+            <h2>
+              SKILLS
+            </h2>
+            <div class="smallText">
+              <div class="skill"><div><span>Python</span></div></div>
+              <div class="skill"><div><span>Data Wrangling</span></div></div>
+              <div class="skill"><div><span>Data Cleaning</span></div></div>
+              <div class="skill"><div><span>Data Analysis</span></div></div>
+              <div class="skill"><div><span>Data Visualization</span></div></div>
+              <div class="skill"><div><span>Requirement Engineering</span></div></div>
+              <div class="skill"><div><span>Test Automation</span></div></div>
+              <div class="skill"><div><span>CI/CD</span></div></div>
+              <div class="skill"><div><span>CAN Protocol</span></div></div>
+              <div class="skill"><div><span>Database Handling</span></div></div>
+            </div>
+          </div>
+          <div class="item">
+            <h2>EDUCATION</h2>
+            <div class="smallText">
+              <p class="bolded white">Master of Science</p>
+              <p>Software Engineering for Embedded Systems</p>
+              <p>Technical University of Kaiserslautern</p>
+              <p>2017 - 2020</p>
+            </div>
+            <div class="smallText">
+              <p class="bolded white">Bachelor of Technology</p>
+              <p>Electronics & Communication Engineering</p>
+              <p>Integral University, Lucknow</p>
+              <p>2008 - 2012</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="rightPanel">
+        <div>
+          <h1>Faisal Ahmed</h1>
+          <div class="smallText">
+            <h3>
+              Software Technical Lead
+            </h3>
+          </div>
+        </div>
+        <div>
+          <h2>
+            About me
+          </h2>
+          <div class="smallText">
+            <p>
+              With over 12 years of experience in embedded systems, I specialize in generating mock and synthetic data, data wrangling, validation,
+and analysis, along with system testing and automation. I have extensive experience in software development, having led teams focused
+on test automation tool development and system testing, particularly within the automotive domain. My expertise is centered
+on ensuring data integrity, deriving actionable insights, and driving innovation in automotive technologies, all while mentoring teams
+and continuously expanding my technical expertise across various fields.
+            </p>
+
+          </div>
+        </div>
+        <div class="workExperience">
+          <h2>
+            Work experience
+          </h2>
+
+
+          <ul>
+            <li>
+              <div class="projectName bolded">
+                <span>Software  Technical Lead, DAF Trucks, Netherlands | Nov 2023 - Present</span>
+              </div>
+              <div class="smallText">
+                <p>
+                 Joined the Telematics team as Technical Lead for Measurement Data. Responsible for generating mock
+data to validate the correct recording and transmission of data from real trucks. Ensured that the device
+accurately records data and sends it to the data warehouse. Conducted thorough analysis of both mock
+data and real truck data, involving data cleaning, wrangling, and analysis. Ensured that the collected data
+was processed correctly and validated its transmission to other consumers
+                </p>
+                <p>
+                  <span class="bolded">Skills: </span>
+                  Mock Data Generation& Simulation, Data Wrangling & Validation, Data Analysis & Visualization,
+                  Pipeline Development, Data Integration, AWS (S3), Kafka,  Python, CAN, J1939, pyTest, Snowflake,
+                  CI/CD, Pandas, Numpy
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <div class="projectName bolded">
+                <span>Senior Software Engineer, EBAY, Netherlands | Nov 2022 - Oct 2023</span>
+              </div>
+              <div class="smallText">
+                <p>
+                 Joined eBay in the Ads group, transitioning to the e-commerce domain. Responsible for validating algorithms,
+automating tests using Python, and creating CI/CD pipelines in Jenkins. Performed data analysis
+using Grafana to monitor and alert on key metrics. Optimized the regression test cycle by improving the
+code base and generating mock data to validate business logic, significantly reducing regression time.
+                </p>
+                <p>
+                  <span class="bolded">Skills: </span>
+                  Mock Data Generation& Simulation, Algorithm Validation, Data Validation, Data Cleaning,
+                  Data Processing, Data Analysis with Grafana, Mock Data Generation, Data Monitoring and Alerts,
+                  Python, Agile, Git/Github, Jenkins, SQL, CI/CD, Pandas,
+                  Jmeter, Postman, Ads, CPC, Backend
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <div class="projectName bolded">
+                <span>Senior Systems Engineer, Thermo King, India | May 2022 - Oct 2022</span>
+              </div>
+              <div class="smallText">
+                <p>
+                 In this role, I was responsible for writing, discussing and reviewing the product requirement for one of the
+HVAC products of Thermoking North America. I was involved in requirement elicitation, analysis and review
+with product stakeholders. I lead software development planning and monitoring activities.
+                </p>
+                <p>
+                  <span class="bolded">Skills: </span>
+                  Systems Engineering, Project Management, System Design, Requirement Analysis & Elicitation HPQE
+                </p>
+              </div>
+            </li>
+
+
+            <li>
+              <div class="projectName bolded">
+                <span>Technical Lead, Controls & Software, TRANE TECHNOLOGIES (FORMERLY INGERSOLL RAND),
+India | July 2019 - April 2022</span>
+              </div>
+              <div class="smallText">
+                <p>
+                In this role, I have played a pivotal role in improving the quality and delivery of the QA team and increasing
+the automation coverage across multiple NPD (New Product Development) projects. I have streamlined
+the coding guidelines and practices in the team and successfully introduced process improvements.
+                <p>Internal Product Owner for Thermo King next gen controller (Advancer MT) </p>
+                <p>Leading the team that develops automation frameworks and tools </p>
+                <p>Design, development and deployment of automation frameworks and applications.</p>
+                <p>Provide technical consultation to different business units in the organization on architecting Python. </p>
+                <p>Design of software systems considering scalability and concurrency.</p>
+                <p>applications, software patterns like MVVM</p>
+                <p>Data analysis and visualization of multiple team matrices</p>
+                <p>Member of Technical Training Council in the organization; training provided on Intermediate Python,
+<!--                <p>-->
+<!--                  <span class="bolded">Skills: </span>-->
+<!--                  Systems Engineering, Project Management, System Design, Requirement Analysis & Elicitation HPQE-->
+<!--                </p>-->
+              </div>
+            </li>
+
+
+              <li>
+              <div class="projectName bolded">
+                <span>Senior Software Engineer, Automation & Tools Development, INGERSOLL RAND, India | April 2015 - June 2019</span>
+              </div>
+              <div class="smallText">
+                <p>
+                  Independently developed multiple scalable automation frameworks for the team that significantly increased the QA team’s productivity.
+                  <p>Design, development and deployment of test automation frameworks</p>
+                <p>Development of sensor simulators</p>
+                <p>Coaching the team on Python best practices and exploring Test Driven Development</p>
+                <p>Develop automation frameworks for multiple Strategic Business Units.</p>
+<!--                <p>-->
+<!--                  <span class="bolded">Skills: </span>-->
+<!--                  Systems Engineering, Software Test Engineering, System, Requirement Analysis & Elicitation HPQE-->
+<!--                </p>-->
+              </div>
+            </li>
+
+            <li>
+              <div class="projectName bolded">
+                <span>Software Test Engineer, ROBERT BOSCH ENGINEERING & BUSINESS SOLUTIONS, India | July 2012 - March 2015</span>
+              </div>
+              <div class="smallText">
+                <p>
+                  I was responsible for performing Smoke & Regression testing for active safety systems (ABS, TCS), for 2-
+wheelers/4-wheelers for JOEM. Requirement analysis, Test Case automation, Test Case Management and Defect validation
+                  were my primary responsibilities. </p>
+
+              </div>
+            </li>
+
+
+          </ul>
+
+
+
+<!--          </ul>-->
+
+
+
+        </div>
+      </div>
+    </div>
+  </page>
+  <page size="A4">
+    <div class="container">
+      <div class="leftPanel">
+      </div>
+      <div class="rightPanel">
+      </div>
+  </page>
+</body>
+</html>
