This commit updates folder structure.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <page size="A4">
     <div class="container">
       <div class="leftPanel">
-        <img src=".assets/faisalAhmed.png"/>
+        <img src="assets/faisalahmed.png"/>
         <div class="details">
           <div class="item bottomLineSeparator">
             <h2>
